@@ -451,8 +451,6 @@ public abstract class Sensor
       return deviceReader.pollingThreadRunning;
   }
 
-
-
   // Object Overrides -----------------------------------------------------------------------------
 
   /**
@@ -541,6 +539,30 @@ public abstract class Sensor
     private Thread pollingThread;
 
     /**
+     * The actual interval used
+     */
+    private int interval;
+    
+
+    public DeviceReader() {
+        String eventProducerType = (eventProducer instanceof ReadCommand)?"ReadCommand":"StatusCommand";
+        if (eventProducer instanceof ReadCommand)
+        {
+          int pollingInterval = ((ReadCommand)eventProducer).getPollingInterval();
+          if (pollingInterval > 0)
+          {
+            this.interval = ((ReadCommand)eventProducer).getPollingInterval();
+          } else {
+            this.interval = ReadCommand.POLLING_INTERVAL;
+          }
+        } else
+        {
+          this.interval = ReadCommand.POLLING_INTERVAL;
+        }
+        log.info("Created polling thread for sensor (ID = {0}, name = {1}), event producer type: {2}, polling interval {3}", getSensorID(), getName(), eventProducerType, this.interval);
+    }
+    
+    /**
      * Starts the device polling thread.
      */
     public void start()
@@ -609,7 +631,7 @@ public abstract class Sensor
 
         try
         {
-          Thread.sleep(ReadCommand.POLLING_INTERVAL);
+          Thread.sleep(this.interval);
         }
         catch (InterruptedException e)
         {
