@@ -185,31 +185,39 @@ public class SensorTest
 
 
   /**
-   * Test that the binding of event producer to sensor works correctly.
+   * Test that the binding of event producer to sensor works correctly and also test default polling interval
    *
    * @throws Exception if test fails
    */
-  @Test public void testSensorRead() throws Exception
+  @Test public void testSensorReadWithDefaultPolling() throws Exception
   {
-    Sensor s1 = new SwitchSensor("switch", 84, cache, new SwitchRead("switch", 84));
+    SwitchRead readCommand = new SwitchRead("switch", 84);
+    Sensor s1 = new SwitchSensor("switch", 84, cache, readCommand);
 
     cache.registerSensor(s1);
     s1.start();
 
+    // Give it enough time to poll at least twice
+    Thread.sleep(ReadCommand.POLLING_INTERVAL * 3);
+
     String returnValue = getSensorValueFromCache(84);
 
     Assert.assertTrue(returnValue.equals("on"));
+    assertWithinRange(ReadCommand.POLLING_INTERVAL, readCommand.getPolledInterval(), 5);
 
-
-
-    Sensor s2 = new RangeSensor("range", 33, cache, new RangeRead("range", 33, 0, 1), 0, 1);
+    RangeRead readCommand2 = new RangeRead("range", 33, 0, 1);
+    Sensor s2 = new RangeSensor("range", 33, cache, readCommand2, 0, 1);
 
     cache.registerSensor(s2);
     s2.start();
 
+    // Give it enough time to poll at least twice
+    Thread.sleep(ReadCommand.POLLING_INTERVAL * 3);
+
     returnValue = getSensorValueFromCache(33);
 
     Assert.assertTrue(returnValue.equals("0"));
+    assertWithinRange(ReadCommand.POLLING_INTERVAL, readCommand2.getPolledInterval(), 10);
   }
 
 
@@ -230,8 +238,74 @@ public class SensorTest
     
   }
 
+  /**
+   * Test read commands which override getPollingInterval
+   */
+  @Test public void testReadCommandWithPollingInterval() throws Exception
+  {
+    SwitchReadPolling readCommand = new SwitchReadPolling("switchPoll100", 100, 100);
+    Sensor s1 = new SwitchSensor("switchPoll100", 100, cache, readCommand);
+    cache.registerSensor(s1);
+    s1.start();
+    
+    // Give it enough time to poll at least twice
+    Thread.sleep(100 * 3);
+    
+    String returnValue = getSensorValueFromCache(100);
+    Assert.assertTrue(returnValue.equals("on"));
+    Assert.assertFalse(s1.isEventListener());
+    Assert.assertTrue(s1.isPolling());
+    assertWithinRange(100, readCommand.getPolledInterval(), 5);
+    
+    readCommand = new SwitchReadPolling("switchPoll777", 777, 777);
+    Sensor s2 = new SwitchSensor("switchPoll777", 777, cache, readCommand);
+    cache.registerSensor(s2);
+    s2.start();
 
+    // Give it enough time to poll at least twice
+    Thread.sleep(777 * 3);
 
+    returnValue = getSensorValueFromCache(777);
+    Assert.assertTrue(returnValue.equals("on"));    
+    Assert.assertFalse(s2.isEventListener());
+    Assert.assertTrue(s2.isPolling());
+    assertWithinRange(777, readCommand.getPolledInterval(), 5);
+  }
+
+  /**
+   * Test read commands which override getPollingInterval with an invalid value.
+   * Tests negative and 0 as values, both of which should result in the default interval being used.
+   */
+  @Test public void testReadCommandWithInvalidPollingInterval() throws Exception
+  {
+    SwitchReadPolling readCommand = new SwitchReadPolling("switchPoll0", 100, 0);
+    Sensor s1 = new SwitchSensor("switchPoll0", 100, cache, readCommand);
+    cache.registerSensor(s1);
+    s1.start();
+    
+    // Give it enough time to poll at least twice
+    Thread.sleep(ReadCommand.POLLING_INTERVAL * 3);
+    
+    String returnValue = getSensorValueFromCache(100);
+    Assert.assertTrue(returnValue.equals("on"));
+    Assert.assertFalse(s1.isEventListener());
+    Assert.assertTrue(s1.isPolling());
+    assertWithinRange(ReadCommand.POLLING_INTERVAL, readCommand.getPolledInterval(), 5);
+    
+    readCommand = new SwitchReadPolling("switchPoll0", 777, -10);
+    Sensor s2 = new SwitchSensor("switchPoll0", 777, cache, readCommand);
+    cache.registerSensor(s2);
+    s2.start();
+
+    // Give it enough time to poll at least twice
+    Thread.sleep(ReadCommand.POLLING_INTERVAL * 3);
+
+    returnValue = getSensorValueFromCache(777);
+    Assert.assertTrue(returnValue.equals("on"));    
+    Assert.assertFalse(s2.isEventListener());
+    Assert.assertTrue(s2.isPolling());
+    assertWithinRange(ReadCommand.POLLING_INTERVAL, readCommand.getPolledInterval(), 5);
+  }
 
   // TODO : test contract on modifying sensor properties -- getProperties() method
 
@@ -249,6 +323,10 @@ public class SensorTest
     return cache.queryStatus(sensorID);
   }
 
+  private void assertWithinRange(long expected, long actual, long delta)
+  {
+     Assert.assertTrue((actual >= (expected - delta)) && (actual <= (expected + delta)));
+  }
   
   // Nested Classes -------------------------------------------------------------------------------
 
@@ -258,6 +336,9 @@ public class SensorTest
 
     private String expectedName;
     private int expectedid;
+    
+    private long lastReadTimestamp = -1;
+    private long polledInterval = -1;
 
     SwitchRead(String expectedName, int expectedid)
     {
@@ -272,10 +353,37 @@ public class SensorTest
       Assert.assertTrue(s.getSensorID() == expectedid);
       Assert.assertTrue(s.getName().equals(expectedName));
 
+      long currentTime = System.currentTimeMillis();
+      if (lastReadTimestamp != -1) {
+         polledInterval = currentTime - lastReadTimestamp;
+      }
+      lastReadTimestamp = currentTime;
+
       return "on";
     }
+    
+    public long getPolledInterval()
+    {
+       return this.polledInterval;
+    }
+
   }
 
+  private static class SwitchReadPolling extends SwitchRead
+  {
+    private int interval;
+    
+    SwitchReadPolling(String expectedName, int expectedid, int interval)
+    {
+      super(expectedName, expectedid);
+      this.interval = interval;
+    }
+
+    @Override
+    public int getPollingInterval() {
+      return this.interval;
+    }
+  }
 
   private static class RangeRead extends ReadCommand
   {
@@ -283,6 +391,9 @@ public class SensorTest
     private int expectedid;
     private int max;
     private int min;
+
+    private long lastReadTimestamp = -1;
+    private long polledInterval = -1;
 
     RangeRead(String expectedName, int expectedid, int min, int max)
     {
@@ -307,8 +418,21 @@ public class SensorTest
       RangeSensor r = (RangeSensor)s;
       Assert.assertTrue(r.getMaxValue() == 1);
       Assert.assertTrue(r.getMinValue() == 0);
+      
+      long currentTime = System.currentTimeMillis();
+      if (lastReadTimestamp != -1) {
+         polledInterval = currentTime - lastReadTimestamp;
+      }
+      lastReadTimestamp = currentTime;
+
       return "0";
     }
+    
+    public long getPolledInterval()
+    {
+       return this.polledInterval;
+    }
+    
   }
 
 
